# Virtuoso-Cyrano

./: .env  Cargo.toml
prorotypes/: colors.json
scripts/: parse_svg.py
src/: console_backend.rs  cyrano_server.rs  gpio.rs  gpio_lib.rs  layouts.rs  legacy_backend.rs  main.rs  match_info.rs  modules.rs  slint_frontend.rs  virtuoso_config.rs
src/gpio_wrapper/: Makefile
src/slint/: main.slint
