[package]
name = "Virtuoso-l"
version = "0.1.0"
edition = "2021"
default-run = "local_debug"

[dependencies]
libgpiod = { version = "0.2.2", features = ["v2_1"], optional = true}
serial = { version = "0.4.0", optional = true}

[features]
default = ["console_backend", "cyrano_server"]
legacy_backend = ["libgpiod", "serial"]
console_backend = []
cyrano_server = []

[build]
target = "x86_64-unknown-linux-gnu"

[target.armv7-unknown-linux-gnueabihf]
target = "bananapi_m2_zero"

[[bin]]
name = "local_debug"
path = "src/main.rs"
required-features = ["console_backend", "cyrano_server"]

[[bin]]
name = "bananapi_m2_zero_legacy"
path = "src/main.rs"
required-features = ["legacy_backend", "cyrano_server"]
