[package]
name = "Virtuoso-l"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.7"
libgpiod = { version = "0.2.2", features = ["v2_1"], optional = true }
log = "0.4.26"
serial = { version = "0.4.0", optional = true }
slint = { version = "1.10.0", default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2", "std"], optional = true }

[features]
default = ["console_backend", "slint_frontend", "cyrano_server"]
legacy_backend = ["serial"]
console_backend = []
cyrano_server = []
slint_frontend = ["slint"]

[[bin]]
name = "Virtuoso"
path = "src/main.rs"
